--- a/estilos.css
+++ b/estilos.css
@@ -164,7 +164,7 @@ header{
     object-fit: cover;
     width: 60%;
     border-radius: 10px;
-    transform: scale(0);
+    /* transform: scale(0); */
     transition: transform .3s .2s;
 }
 
